--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <div class="c-banner__inner">
       <div class="c-label c-label--home">Category 1</div>
       <h2 class="c-banner__title">
-        Title title title title title title title title title title title title
+        Title title title&nbsp;&nbsp;title&nbsp;&nbsp;title&nbsp; title&nbsp; title title&nbsp; title title&nbsp; title&nbsp; title&nbsp;
         title
       </h2>
     </div>
@@ -34,7 +34,7 @@
           />
         </div>
         <div class="c-post__content">
-          <h3 class="c-post__title">
+          <h3 class="c-post__title c-post__title--bold">
             Title title title title title title title title
           </h3>
           <p class="c-post__text">
@@ -56,7 +56,7 @@
           <img src="/assets/img/image.png" alt="Title title title title" />
         </div>
         <div class="c-post__content">
-          <h3 class="c-post__title">Title title title title</h3>
+          <h3 class="c-post__title c-post__title--bold">Title title title title</h3>
           <p class="c-post__text">
             text text text text text text text text text text text text text
             text text text text text text text text text text text text text
@@ -76,7 +76,7 @@
           />
         </div>
         <div class="c-post__content">
-          <h3 class="c-post__title">Title title title title title title</h3>
+          <h3 class="c-post__title c-post__title--bold">Title title title title title title</h3>
           <p class="c-post__text">
             text text text text text text text text text text text text text
             text text text text text text text text text text text text text
@@ -97,7 +97,7 @@
           />
         </div>
         <div class="c-post__content">
-          <h3 class="c-post__title">Title title title title title</h3>
+          <h3 class="c-post__title c-post__title--bold">Title title title title title</h3>
           <p class="c-post__text">
             text text text text text text text text text text text text text
             text text text text text text text text text text text text text
@@ -128,7 +128,7 @@
               />
             </div>
             <div class="c-label c-label--green c-label--feature">Text text</div>
-            <h3 class="c-feature__title">
+            <h3 class="c-post__title">
               Title title title title title title title title title title title
               title title title title title title title title title title title
               title title title title title title
@@ -145,7 +145,7 @@
               />
             </div>
             <div class="c-label c-label--green c-label--feature">Text text</div>
-            <h3 class="c-feature__title">
+            <h3 class="c-post__title">
               Title title title title title title title title title title title
               title title title title title title title title title title title
             </h3>
@@ -161,7 +161,7 @@
               />
             </div>
             <div class="c-label c-label--pink c-label--feature">Text</div>
-            <h3 class="c-feature__title">
+            <h3 class="c-post__title">
               Title title title title title title title title title title title
               title title title title title title title title title title title
             </h3>
@@ -177,7 +177,7 @@
               />
             </div>
             <div class="c-label c-label--green c-label--feature">Text text</div>
-            <h3 class="c-feature__title">
+            <h3 class="c-post__title">
               Title title title title title title title title title title title
               title title title title title title title
             </h3>
@@ -196,7 +196,7 @@
             <div class="c-label c-label--yellow c-label--feature">
               Text text text
             </div>
-            <h3 class="c-feature__title">
+            <h3 class="c-post__title">
               Title title title title title title title title title title title
               title title title title title title title title title title title
               title title title
@@ -213,7 +213,7 @@
               />
             </div>
             <div class="c-label c-label--green c-label--feature">Text text</div>
-            <h3 class="c-feature__title">
+            <h3 class="c-post__title">
               Title title title title title title title title title title title
               title title title title
             </h3>
