--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
 
 <!-- @content -->
 <main class="p-home">
-  <section class="c-breadcrumb l-container">
-    <p><i class="fa-solid fa-house"></i> HOME</p>
-  </section>
+  <div class="c-breadcrumb l-container">
+    <a href="./index.html" class="c-breadcrumb__link">HOME</a>
+  </div>
 
   <section class="c-banner l-container">
     <div class="c-banner__inner">
