--- a/src/link1.html
+++ b/src/link1.html
@@ -3,37 +3,32 @@
 
 <!-- @content -->
 <main class="p-link l-container">
-  <section class="c-breadcrumb c-breadcrumb--link">
-    <p>
-      <i class="fa-solid fa-house"></i> HOME
-      <i class="c-breadcrumb__arrow fa-solid fa-angle-right"></i>
-      Link1
-    </p>
-  </section>
+  <div class="c-breadcrumb c-breadcrumb--link1">
+    <a href="#" class="c-breadcrumb__link"> HOME </a>
+    <a href="#" class="c-breadcrumb__page"> Link1 </a>
+  </div>
 
-  <section class="c-anchorlink">
+  <div class="c-anchorlink">
     <a class="c-anchorlink__button" href="#">
-      <i class="c-anchorlink__icon fa-solid fa-angle-down"></i> Anchor link 1</a
+      <i class="c-anchorlink__icon fa fa-angle-down"></i> Anchor link 1</a
     >
     <a class="c-anchorlink__button" href="#">
-      <i class="c-anchorlink__icon fa-solid fa-angle-down"></i> Anchor link 2</a
+      <i class="c-anchorlink__icon fa fa-angle-down"></i> Anchor link 2</a
     >
     <a class="c-anchorlink__button" href="#">
-      <i class="c-anchorlink__icon fa-solid fa-angle-down"></i> Anchor link 3</a
+      <i class="c-anchorlink__icon fa fa-angle-down"></i> Anchor link 3</a
     >
-  </section>
+  </div>
 
-  <section class="c-section">
-    <div class="c-section__header c-section__header--transparent">
-      <h2 class="c-header__title--small">TITLE ANCHOR LINK 1</h2>
-    </div>
+  <section class="c-anchor1">
+    <h2 class="c-anchor c-anchor1__title">TITLE ANCHOR LINK 1</h2>
 
-    <p class="c-text">
+    <p class="c-text c-text--link1">
       Dummy <a href="#" class="c-link c-link--blue">dummy dummy dummy</a> dummy
       dummy dummy
     </p>
 
-    <div class="c-section__body c-section__body--margin">
+    <div class="c-box">
       <div class="c-feature__post">
         <a href="#">
           <div class="c-feature__image">
@@ -50,6 +45,7 @@
           </h3>
         </a>
       </div>
+
       <div class="c-feature__post">
         <a href="#">
           <div class="c-feature__image">
@@ -136,13 +132,11 @@
     </div>
   </section>
 
-  <section class="c-section c-section--anchorlink">
-    <div class="c-section__header c-section__header--transparent">
-      <h2 class="c-header__title--small">TITLE ANCHOR LINK 2</h2>
-    </div>
+  <section class="c-anchor2">
+    <h2 class="c-anchor c-anchor2__title">TITLE ANCHOR LINK 2</h2>
 
-    <div class="c-grid">
-      <div class="c-post">
+    <div class="c-box c-box--anchor2">
+      <div class="c-post c-post--anchor2">
         <a href="#">
           <img
             class="c-post__image"
@@ -159,7 +153,7 @@
           </h3>
         </a>
       </div>
-      <div class="c-post">
+      <div class="c-post c-post--anchor2">
         <a href="#">
           <img
             class="c-post__image"
@@ -174,7 +168,7 @@
           </h3>
         </a>
       </div>
-      <div class="c-post">
+      <div class="c-post c-post--anchor2">
         <a href="#">
           <img
             class="c-post__image"
@@ -189,7 +183,7 @@
           </h3>
         </a>
       </div>
-      <div class="c-post">
+      <div class="c-post c-post--anchor2">
         <a href="#">
           <img
             class="c-post__image"
@@ -204,7 +198,7 @@
           </h3>
         </a>
       </div>
-      <div class="c-post">
+      <div class="c-post c-post--anchor2">
         <a href="#">
           <img
             class="c-post__image"
@@ -219,7 +213,7 @@
           </h3>
         </a>
       </div>
-      <div class="c-post">
+      <div class="c-post c-post--anchor2">
         <a href="#">
           <img
             class="c-post__image"
@@ -234,7 +228,7 @@
           </h3>
         </a>
       </div>
-      <div class="c-post">
+      <div class="c-post c-post--anchor2">
         <a href="#">
           <img
             class="c-post__image"
@@ -249,7 +243,7 @@
           </h3>
         </a>
       </div>
-      <div class="c-post">
+      <div class="c-post c-post--anchor2">
         <a href="#">
           <img
             class="c-post__image"
@@ -268,12 +262,10 @@
     </div>
   </section>
 
-  <section class="c-section c-section--table">
-    <div class="c-section__header c-section__header--transparent">
-      <h2 class="c-header__title--small">TITLE ANCHOR LINK 3</h2>
-    </div>
+  <section class="c-anchor3">
+    <h2 class="c-anchor c-anchor3__title">TITLE ANCHOR LINK 3</h2>
 
-    <div class="c-section__body">
+    <div class="c-anchor3__body">
       <div class="c-table">
         <h3 class="c-table__caption">Caption table 1</h3>
         <p class="c-table__text">
