--- a/src/link1.html
+++ b/src/link1.html
@@ -1,11 +1,11 @@
-<%- include('_layouts/layout', { title: 'Link 1 page', breadcrumb: 'Link1' });
+<%- include('_layouts/layout', { title: 'Link 1 page', breadcrumb: 'link1' });
 -%>
 
 <!-- @content -->
 <main class="p-link l-container">
   <div class="c-breadcrumb c-breadcrumb--link1">
-    <a href="#" class="c-breadcrumb__link"> HOME </a>
-    <a href="#" class="c-breadcrumb__page"> Link1 </a>
+    <a href="./index.html" class="c-breadcrumb__link c-breadcrumb__home"> HOME </a>
+    <a href="./link1.html" class="c-breadcrumb__page"> Link1 </a>
   </div>
 
   <div class="c-anchorlink">
