--- a/src/link2.html
+++ b/src/link2.html
@@ -1,12 +1,12 @@
-<%- include('_layouts/layout', { title: 'Link 2 page', breadcrumb: 'Link2' });
+<%- include('_layouts/layout', { title: 'Link 2 page', breadcrumb: 'link2' });
 -%>
 
 <!-- @content -->
 
 <main class="p-link2 l-container">
   <div class="c-breadcrumb c-breadcrumb--link1">
-    <a href="#" class="c-breadcrumb__link"> HOME </a>
-    <a href="#" class="c-breadcrumb__page"> Link2 </a>
+    <a href="./index.html" class="c-breadcrumb__link c-breadcrumb__home"> HOME </a>
+    <a href="./link2.html" class="c-breadcrumb__page"> Link2 </a>
   </div>
 
   <h1 class="c-link2__title">
