--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <%- include('_layouts/layout', { title: 'Home page' }); -%>
 
 <!-- @meta -->
-<meta name="description" content="Home page" />
+<meta name="description" content="Home page" >
 <!-- @@meta -->
 
 <!-- @content -->
@@ -11,12 +11,10 @@
   </div>
 
   <section class="c-banner l-container">
+    <img src="./assets/img/bg-header.png" alt="Title title title&nbsp;&nbsp;title&nbsp;&nbsp;title&nbsp; title&nbsp; title title&nbsp; title title&nbsp; title&nbsp; title&nbsp; title">
     <div class="c-banner__inner">
       <div class="c-label c-label--home">Category 1</div>
-      <h2 class="c-banner__title">
-        Title title title&nbsp;&nbsp;title&nbsp;&nbsp;title&nbsp; title&nbsp; title title&nbsp; title title&nbsp; title&nbsp; title&nbsp;
-        title
-      </h2>
+      <h1 class="c-banner__title">Title title title&nbsp;&nbsp;title&nbsp;&nbsp;title&nbsp; title&nbsp; title title&nbsp; title title&nbsp; title&nbsp; title&nbsp; title</h1>
     </div>
   </section>
 
@@ -29,9 +27,9 @@
         <div class="c-post__image">
           <div class="c-label c-label--green c-label--post">Category 2</div>
           <img
-            src="/assets/img/image.png"
+            src="./assets/img/image.png"
             alt="Title title title title title title title title"
-          />
+          >
         </div>
         <div class="c-post__content">
           <h3 class="c-post__title c-post__title--bold">
@@ -53,7 +51,7 @@
       <div class="c-post c-post--row">
         <div class="c-post__image">
           <div class="c-label c-label--yellow c-label--post">Category 1</div>
-          <img src="/assets/img/image.png" alt="Title title title title" />
+          <img src="./assets/img/image.png" alt="Title title title title" >
         </div>
         <div class="c-post__content">
           <h3 class="c-post__title c-post__title--bold">Title title title title</h3>
@@ -71,9 +69,9 @@
         <div class="c-post__image">
           <div class="c-label c-label--pink c-label--post">Category 3</div>
           <img
-            src="/assets/img/image.png"
+            src="./assets/img/image.png"
             alt="Title title title title title title"
-          />
+          >
         </div>
         <div class="c-post__content">
           <h3 class="c-post__title c-post__title--bold">Title title title title title title</h3>
@@ -92,9 +90,9 @@
         <div class="c-post__image">
           <div class="c-label c-label--green c-label--post">Category 2</div>
           <img
-            src="/assets/img/image.png"
+            src="./assets/img/image.png"
             alt="Title title title title title"
-          />
+          >
         </div>
         <div class="c-post__content">
           <h3 class="c-post__title c-post__title--bold">Title title title title title</h3>
@@ -123,9 +121,9 @@
           <a href="#">
             <div class="c-feature__image">
               <img
-                src="/assets/img/feature.png"
+                src="./assets/img/feature.png"
                 alt="Title title title title title title title title title title title title title title title title title title title title title title title title title title title title"
-              />
+              >
             </div>
             <div class="c-label c-label--green c-label--feature">Text text</div>
             <h3 class="c-post__title">
@@ -139,10 +137,10 @@
           <a href="#">
             <div class="c-feature__image">
               <img
-                src="/assets/img/feature.png"
+                src="./assets/img/feature.png"
                 alt="Title title title title title title title title title title title
                 title title title title title title title title title title title"
-              />
+              >
             </div>
             <div class="c-label c-label--green c-label--feature">Text text</div>
             <h3 class="c-post__title">
@@ -155,10 +153,10 @@
           <a href="#">
             <div class="c-feature__image">
               <img
-                src="/assets/img/feature.png"
+                src="./assets/img/feature.png"
                 alt="Title title title title title title title title title title title
                 title title title title title title title title title title title"
-              />
+              >
             </div>
             <div class="c-label c-label--pink c-label--feature">Text</div>
             <h3 class="c-post__title">
@@ -171,10 +169,10 @@
           <a href="#">
             <div class="c-feature__image">
               <img
-                src="/assets/img/feature.png"
+                src="./assets/img/feature.png"
                 alt="Title title title title title title title title title title title
                 title title title title title title title "
-              />
+              >
             </div>
             <div class="c-label c-label--green c-label--feature">Text text</div>
             <h3 class="c-post__title">
@@ -187,11 +185,11 @@
           <a href="#">
             <div class="c-feature__image">
               <img
-                src="/assets/img/feature.png"
+                src="./assets/img/feature.png"
                 alt="Title title title title title title title title title title title
                 title title title title title title title title title title title
                 title title title"
-              />
+              >
             </div>
             <div class="c-label c-label--yellow c-label--feature">
               Text text text
@@ -207,10 +205,10 @@
           <a href="#">
             <div class="c-feature__image">
               <img
-                src="/assets/img/feature.png"
+                src="./assets/img/feature.png"
                 alt="Title title title title title title title title title title title
                 title title title title"
-              />
+              >
             </div>
             <div class="c-label c-label--green c-label--feature">Text text</div>
             <h3 class="c-post__title">
@@ -238,11 +236,11 @@
         <a href="#">
           <div class="c-blog__image">
             <img
-              src="/assets/img/post.png"
+              src="./assets/img/post.png"
               alt="Title title title title title title title title title title title
               title title title title title title title title title title title
               title title title title title title"
-            />
+            >
           </div>
           <div class="c-label c-label--green c-label--feature">Text text</div>
           <h3 class="c-post__title">
@@ -256,10 +254,10 @@
         <a href="#">
           <div class="c-blog__image">
             <img
-              src="/assets/img/post.png"
+              src="./assets/img/post.png"
               alt="Title title title title title title title title title title title
             title title title title"
-            />
+            >
           </div>
           <div class="c-label c-label--pink c-label--feature">Text</div>
           <h3 class="c-post__title">
@@ -272,10 +270,10 @@
         <a href="#">
           <div class="c-blog__image">
             <img
-              src="/assets/img/post.png"
+              src="./assets/img/post.png"
               alt="Title title title title title title title title title title title
             title title title title"
-            />
+            >
           </div>
           <div class="c-label c-label--green c-label--feature">Text text</div>
           <h3 class="c-post__title">
@@ -289,10 +287,10 @@
         <a href="#">
           <div class="c-blog__image">
             <img
-              src="/assets/img/post.png"
+              src="./assets/img/post.png"
               alt="Title title title title title title title title title title title
             title title title title"
-            />
+            >
           </div>
           <div class="c-label c-label--pink c-label--feature">Text</div>
           <h3 class="c-post__title">
