--- a/src/link2.html
+++ b/src/link2.html
@@ -38,10 +38,10 @@
     </p>
 
     <div class="c-article">
-      <p class="c-article__header c-article__header--blue">
+      <h3 class="c-article__header c-article__header--blue">
         <i class="c-icon fa fa-comment"></i>
         <span>Text text text text text text text text text text</span>
-      </p>
+      </h3>
 
       <p class="c-text c-text--link2">
         Text text text text text text text text text text text text text text
@@ -87,10 +87,10 @@
     </p>
 
     <div class="c-article c-article--seedling">
-      <p class="c-article__header c-article__header--red">
+      <h3 class="c-article__header c-article__header--red">
         <i class="c-icon fa fa-seedling"></i>
         <span>Text text text text text text text text text text </span>
-      </p>
+      </h3>
 
       <p class="c-text c-text--link2">
         Text text text text text text text text text text text text text text
@@ -105,10 +105,10 @@
     </div>
 
     <div class="c-article c-article--seedling">
-      <p class="c-article__header c-article__header--red">
+      <h3 class="c-article__header c-article__header--red">
         <i class="c-icon fa fa-palette"></i>
         <span> Text text text text text text text </span>
-      </p>
+      </h3>
 
       <p class="c-text c-text--link2">
         Text text text text text text text text text text text text text text
@@ -132,10 +132,10 @@
     </div>
 
     <div class="c-article c-article--comment">
-      <p class="c-article__header c-article__header--red">
+      <h3 class="c-article__header c-article__header--red">
         <i class="c-icon fa fa-comment"></i>
         <span>Text text text text text text text text text text</span>
-      </p>
+      </h3>
 
       <p class="c-text c-text--link2">
         Text text text text text text text text text text text text text text
@@ -157,9 +157,9 @@
       <div class="c-table c-table--full">
         <p class="c-table__text">
           Text text text text text text text text text text text text text text
-          text text text text text text text text. <br />
+          text text text text text text text text. <br >
           Text text text text text text text text text text text text text text
-          text text text. <br />
+          text text text. <br >
           Text text text text text text text text text text text text text text
           text text text text text text text text text text text text.
         </p>
