--- a/src/link1.html
+++ b/src/link1.html
@@ -23,10 +23,10 @@
   <section class="c-anchor1">
     <h2 class="c-anchor c-anchor1__title">TITLE ANCHOR LINK 1</h2>
 
-    <p class="c-text c-text--link1">
+    <h1 class="c-text c-text--link1">
       Dummy <a href="#" class="c-link c-link--blue">dummy dummy dummy</a> dummy
       dummy dummy
-    </p>
+    </h1>
 
     <div class="c-box">
       <div class="c-feature__post">
@@ -35,7 +35,7 @@
             <img
               src="/assets/img/feature.png"
               alt="Title title title title title title title title title title title title title title title title title title title title title title title title title title title title"
-            />
+            >
           </div>
           <div class="c-label c-label--green c-label--feature">Text text</div>
           <h3 class="c-post__title">
@@ -53,7 +53,7 @@
               src="/assets/img/feature.png"
               alt="Title title title title title title title title title title title
               title title title title title title title title title title title"
-            />
+            >
           </div>
           <div class="c-label c-label--green c-label--feature">Text text</div>
           <h3 class="c-post__title">
@@ -69,7 +69,7 @@
               src="/assets/img/feature.png"
               alt="Title title title title title title title title title title title
               title title title title title title title title title title title"
-            />
+            >
           </div>
           <div class="c-label c-label--pink c-label--feature">Text</div>
           <h3 class="c-post__title">
@@ -84,7 +84,7 @@
             <img
               src="/assets/img/feature.png"
               alt="Title title title title title title title title title title title title title title title title title title title title title title title title title title title title"
-            />
+            >
           </div>
           <div class="c-label c-label--green c-label--feature">Text text</div>
           <h3 class="c-post__title">
@@ -101,7 +101,7 @@
               alt="Title title title title title title title title title title title
               title title title title title title title title title title title
               title title title "
-            />
+            >
           </div>
           <div class="c-label c-label--yellow c-label--feature">
             Text text text
@@ -120,7 +120,7 @@
               src="/assets/img/feature.png"
               alt="Title title title title title title title title title title title
               title title title title"
-            />
+            >
           </div>
           <div class="c-label c-label--green c-label--feature">Text text</div>
           <h3 class="c-post__title">
@@ -143,7 +143,7 @@
             src="/assets/img/feature.png"
             alt="Title title title title title title title title title title title
               title title"
-          />
+          >
           <div class="c-label c-label--yellow c-label--feature">
             Text text text
           </div>
@@ -160,7 +160,7 @@
             src="/assets/img/feature.png"
             alt="Title title title title title title title title title title title
               title title title title title title title title title"
-          />
+          >
           <div class="c-label c-label--pink c-label--feature">Text</div>
           <h3 class="c-post__title">
             Title title title title title title title title title title title
@@ -175,7 +175,7 @@
             src="/assets/img/feature.png"
             alt="Title title title title title title title title title title title
               title title title title title title"
-          />
+          >
           <div class="c-label c-label--green c-label--feature">Text text</div>
           <h3 class="c-post__title">
             Title title title title title title title title title title title
@@ -190,7 +190,7 @@
             src="/assets/img/feature.png"
             alt="Title title title title title title title title title title title
                   title title title title title title title title title"
-          />
+        >
           <div class="c-label c-label--pink c-label--feature">Text</div>
           <h3 class="c-post__title">
             Title title title title title title title title title title title
@@ -205,7 +205,7 @@
             src="/assets/img/feature.png"
             alt="Title title title title title title title title title title title
                   title title"
-          />
+          >
           <div class="c-label c-label--green c-label--feature">Text text</div>
           <h3 class="c-post__title">
             Title title title title title title title title title title title
@@ -220,7 +220,7 @@
             src="/assets/img/feature.png"
             alt="Title title title title title title title title title title title
                   title title title title title title title title title "
-          />
+          >
           <div class="c-label c-label--pink c-label--feature">Text</div>
           <h3 class="c-post__title">
             Title title title title title title title title title title title
@@ -235,7 +235,7 @@
             src="/assets/img/feature.png"
             alt="Title title title title title title title title title title title
                   title title title title title title"
-          />
+          >
           <div class="c-label c-label--green c-label--feature">Text text</div>
           <h3 class="c-post__title">
             Title title title title title title title title title title title
@@ -250,7 +250,7 @@
             src="/assets/img/feature.png"
             alt="Title title title title title title title title title title title
                   title title title title title title title title"
-          />
+          >
 
           <div class="c-label c-label--pink c-label--feature">Text</div>
           <h3 class="c-post__title">
